<resources>
    <string name="app_name">Laboratorio05Rodriguez</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_movie_text">New movie</string>
    <string name="add_movie_name_text">Add movie name</string>
    <string name="submit_text_button">Submit</string>
    <string name="name_text">Name</string>
    <string name="billboard_text">Billboard</string>
    <string name="category_text">Category</string>
    <string name="description_text">Description</string>
    <string name="califaction_text">Califaction</string>
    <string name="movie_description_text">Star Wars episodio 3: La venganza de los sith</string>
    <string name="Category_text_description">Ciencia ficción</string>
    <string name="calification_text_description">9.8</string>
    <string name="card_movie_description">Star Wars episodio 3: La venganza de los sith</string>
</resources>